# Astraltide

./: .gitignore  CNAME  LICENSE  README.md  app.py  freeze.py  index.html  package.json  postcss.config.js  pyproject.toml  webpack.config.js
.github/workflows/: build-and-deploy.yaml
assets/css/: _about.css  _character.css  _common.css  _test.css  _top.css  _vars.css  style.css
assets/js/: app.js  decorate_about.js  fade_header.js  generate_stars.js
static/css/: style.css
static/js/: bundle.js
templates/: _about.html  _character.html  _layout.html  _ogp.html  _test.html  _top.html  index.html
