[project]
name = "Astraltide"
version = "0.1.0"
description = "Astraltide WebSite."
authors = [
    {name = "TsukumoShiro"}
]
maintainers = [
    {name = "きつねあざみ", email = "kituneazami@live.jp"}
]

readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "frozen-flask (>=1.0.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
